Небольшой рефакторинг /build.gradle.kts