@@ -9,8 +9,6 @@ plugins {
 
 android {
     namespace = "ru.erdenian.studentassistant.schedule"
-
-    testOptions.unitTests.all { it.jvmArgs("--add-opens=java.base/java.time=ALL-UNNAMED") }
 }
 
 dependencies {
